test/good/generics/return01.px

func one<T>() T def
    return 10^^16
    return 2.0

print one()
