test/bad/generics/def01.px

func f(T x) def
    return

f(2)
